Major: Change MedicAlert to 70hp
- Added Normal, Hard, Suicidal game modes in Vote Options
- Fixed map-repeat vote. Now you can repeat a map as much as you want

--- a/System/KFMapVote.ini
+++ b/System/KFMapVote.ini
@@ -8,7 +8,7 @@ bAccumulationMode=False
 bEliminationMode=False
 MinMapCount=2
 MapVoteHistoryType=xVoting.MapVoteHistory_INI
-RepeatLimit=4
+RepeatLimit=0
 DefaultGameConfig=0
 bDefaultToCurrentGameType=True
 bMapVote=True
@@ -19,6 +19,9 @@ bAnonymousKicking=True
 MapListLoaderType=xVoting.DefaultMapListLoader
 ServerNumber=1
 CurrentGameConfig=0
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF",Acronym="KF",GameName="Minimal Mods",Mutators="ESWWeightMut.ESWCustomWeight,ZedKillCount.ZedKillCount,WeaponPickupMessage.WeaponPickupMessage,KFShareCash.KFShareCashMut,ReloadOptionsMut.ReloadOptionsMut,RgMsgMut.RgMsgMut,PatriarchScoreboard.PatriarchScoreboard,MedicAlert.MedicAlert,KFARGChat.KFARGChat,DouchebagFixer.DouchebagFixer,KFDamagePopup.mutDamagePopup,CountryTags.CountryTags",Options=)
-GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF",Acronym="KF",GameName="Pure Vanilla",Mutators="NONE",Options=)
-
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF",Acronym="KF",GameName="1- Normal",Mutators="ESWWeightMut.ESWCustomWeight,ZedKillCount.ZedKillCount,WeaponPickupMessage.WeaponPickupMessage,KFShareCash.KFShareCashMut,ReloadOptionsMut.ReloadOptionsMut,RgMsgMut.RgMsgMut,PatriarchScoreboard.PatriarchScoreboard,MedicAlert.MedicAlert,KFARGChat.KFARGChat,DouchebagFixer.DouchebagFixer,KFDamagePopup.mutDamagePopup,CountryTags.CountryTags",Options=)
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF",Acronym="KF",GameName="2- Hard",Mutators="ESWWeightMut.ESWCustomWeight,ZedKillCount.ZedKillCount,WeaponPickupMessage.WeaponPickupMessage,KFShareCash.KFShareCashMut,ReloadOptionsMut.ReloadOptionsMut,RgMsgMut.RgMsgMut,PatriarchScoreboard.PatriarchScoreboard,MedicAlert.MedicAlert,KFARGChat.KFARGChat,DouchebagFixer.DouchebagFixer,KFDamagePopup.mutDamagePopup,CountryTags.CountryTags",Options="Difficulty=4")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF",Acronym="KF",GameName="3- Suicidal",Mutators="ESWWeightMut.ESWCustomWeight,ZedKillCount.ZedKillCount,WeaponPickupMessage.WeaponPickupMessage,KFShareCash.KFShareCashMut,ReloadOptionsMut.ReloadOptionsMut,RgMsgMut.RgMsgMut,PatriarchScoreboard.PatriarchScoreboard,MedicAlert.MedicAlert,KFARGChat.KFARGChat,DouchebagFixer.DouchebagFixer,KFDamagePopup.mutDamagePopup,CountryTags.CountryTags",Options="Difficulty=5")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF",Acronym="KF",GameName="4- Vanilla | Normal",Mutators="NONE",Options=)
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF",Acronym="KF",GameName="5- Vanilla | Hard",Mutators="NONE",Options="Difficulty=4")
+GameConfig=(GameClass="KFMod.KFGameType",Prefix="KF",Acronym="KF",GameName="6- Vanilla | Suicidal",Mutators="NONE",Options="Difficulty=5")
