--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -92,8 +92,8 @@ UseSound=True
 VoIPAllowVAD=False
 ServerActors=IpDrv.MasterServerUplink
 ServerActors=UWeb.WebServer
-; ServerActors=ServerColor.ServerColorActor
-; ServerActors=KFDamagePopup.mutDamagePopup
+ServerActors=ServerColor.ServerColorActor
+ServerActors=MutKillMessage.MutKillMessage
 ServerPackages=Core
 ServerPackages=Engine
 ServerPackages=Fire
@@ -124,18 +124,6 @@ ServerPackages=ROEngine
 ServerPackages=ROInterface
 ServerPackages=KFMod
 ServerPackages=KFChar
-; ServerPackages=KFARGChat
-; ServerPackages=KFShareCash
-; ServerPackages=ReloadOptionsMut
-; ServerPackages=KFDamagePopup
-; ServerPackages=CountryTags
-; ServerPackages=DouchebagFixer
-; ServerPackages=ESWWeightMut
-; ServerPackages=MedicAlert
-; ServerPackages=PatriarchScoreboard
-; ServerPackages=RgMsgMut
-; ServerPackages=WeaponPickupMessage
-; ServerPackages=ZedKillCount
 
 [WinDrv.WindowsClient]
 WindowedViewportX=640
