--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -274,7 +274,7 @@ MasterServerList=(Address="207.135.144.10",Port=28902)
 MasterServerList=(Address="207.135.144.11",Port=28902)
 
 [IpDrv.HTTPDownload]
-RedirectToURL=http://velsan-kf.ultifree.ml/
+RedirectToURL=http://www.skillzservers.com/kf-redirect/
 ProxyServerHost=
 ProxyServerPort=3128
 UseCompression=True
