--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -94,6 +94,7 @@ ServerActors=IpDrv.MasterServerUplink
 ServerActors=UWeb.WebServer
 ServerActors=ServerColor.ServerColorActor
 ServerActors=MutKillMessage.MutKillMessage
+ServerActors=KFMaxPlayers.KFMaxPlayers
 ServerPackages=Core
 ServerPackages=Engine
 ServerPackages=Fire
