[release] v3.1 Public Release

--- a/System/DouchebagFixer.ini
+++ b/System/DouchebagFixer.ini
@@ -1,8 +1,8 @@
 [DouchebagFixer.DouchebagFixer]
-MinimumDouchebagDistance=1250
+MinimumDouchebagDistance=2000
 DouchebagWarningTime=60
 DouchebagKickTime=100
-DouchebagTimeLimit=20
+DouchebagTimeLimit=60
 MinimumDouchebagWave=1
 DouchebagMonsterLimit=4
 MinimumNumberOfDouchebags=3
@@ -10,11 +10,11 @@ bDouchebagBroadcastMessage=True
 bDouchebagProgressMessage=True
 bKickDouchebag=True
 bWarnDouchebag=True
-DouchebagBroadcastMessage=%douchebag%'s being a douchebag.
-DouchebagProgressMessage=Hey douchebag, group up with the others.
-DouchebagWarningMessage=Hey %douchebag%, you're about to get kicked. Go and join the others.
-DouchebagKickMessage=%douchebag% was kicked for being a douchebag.
-DouchebagKickReason=Stop being a douchebag, group up with the others or stay out.
+DouchebagBroadcastMessage=%douchebag%'s being a douchebag.
+DouchebagProgressMessage=Hey dude! Group up with the others Please!
+DouchebagWarningMessage=Hey %douchebag%, you're about to get kicked. Go and join the others.
+DouchebagKickMessage=%douchebag% was kicked because he's not grouping with the others.
+DouchebagKickReason=Stop being a douchebag, group up with the others or stay out.
 DouchebagProgressColour=(B=0,G=0,R=255,A=255)
 DouchebagBroadcastColour=(B=255,G=255,R=255,A=255)
 DouchebagWarningColour=(B=255,G=255,R=255,A=255)
