--- a/System/KFMapVoteHistory.ini
+++ b/System/KFMapVoteHistory.ini
@@ -1,4 +1,23 @@
 [KFMapVoteV2.MVMapRepHistory]
-H=(M="KF-BIOTICSLAB",P=1,N=0)
-H=(M="KF-OFFICES",P=2,N=0)
+H=(M="KF-APERTURE",P=2,N=0)
+H=(M="KF-BIOHAZARD",P=1,N=1)
+H=(M="KF-BIOTICSLAB",P=11,N=2)
+H=(M="KF-BOXWITHOUTHOPE-EXTENDED-IGCEDIT-FIX",P=3,N=0)
+H=(M="KF-DEPARTED",P=1,N=0)
+H=(M="KF-DUST2-CLASSIC-NIGHT-B2",P=0,N=1)
+H=(M="KF-EVILSANTASLAIR",P=2,N=3)
+H=(M="KF-FARM",P=6,N=0)
+H=(M="KF-FARM-DAY-V1",P=4,N=0)
+H=(M="KF-FRIGHTYARD",P=4,N=1)
+H=(M="KF-MANOR",P=1,N=1)
+H=(M="KF-MENU",P=1,N=1)
+H=(M="KF-MOONBASE",P=2,N=0)
+H=(M="KF-NUKETOWN",P=7,N=1)
+H=(M="KF-OFFICES",P=3,N=3)
+H=(M="KF-STEAMLAND",P=1,N=0)
+H=(M="KF-STRONGHOLD",P=1,N=0)
+H=(M="KF-TERMINATION",P=1,N=0)
+H=(M="KF-THRILLSCHILLS",P=4,N=0)
+H=(M="KF-TRANSIT",P=1,N=0)
+H=(M="KF-WESTLONDON",P=3,N=0)
 
