--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -92,6 +92,7 @@ UseSound=True
 VoIPAllowVAD=False
 ServerActors=IpDrv.MasterServerUplink
 ServerActors=UWeb.WebServer
+ServerActors=ServerAdsKF.ServerAdsKF
 ServerPackages=Core
 ServerPackages=Engine
 ServerPackages=Fire
@@ -272,7 +273,7 @@ MasterServerList=(Address="207.135.144.10",Port=28902)
 MasterServerList=(Address="207.135.144.11",Port=28902)
 
 [IpDrv.HTTPDownload]
-RedirectToURL=http://www.skillzservers.com/kf-redirect/
+RedirectToURL=https://kf-server.000webhostapp.com/kf-redirect/
 ProxyServerHost=
 ProxyServerPort=3128
 UseCompression=True
@@ -488,6 +489,8 @@ Applications[0]=xWebAdmin.UTServerAdmin
 ApplicationPaths[0]=/ServerAdmin
 Applications[1]=xWebAdmin.UTImageServer
 ApplicationPaths[1]=/images
+Applications[2]=ServerAdsKF.WebAdmin
+ApplicationPaths[2]=/ServerAdsKF
 bEnabled=True
 ListenPort=8075
 
@@ -512,7 +515,7 @@ IPPolicies=ACCEPT;*
 
 [Engine.GameInfo]
 GoreLevel=2
-MaxSpectators=0
+MaxSpectators=6
 MaxPlayers=6
 AutoAim=1.000000
 GameSpeed=1.000000
@@ -531,12 +534,12 @@ AccessControlClass=Engine.AccessControl
 VotingHandlerType=KFMapVoteV2.KFVotingHandler
 MaxIdleTime=0.000000
 bVACSecured=True
-bAllowBehindView=False
+bAllowBehindView=True
 bAdminCanPause=True
 bWeaponShouldViewShake=True
 bLowGore=False
 bLargeGameVOIP=False
-GameDifficulty=2.000000
+GameDifficulty=4.000000
 MaplistHandlerType=
 ServerSkillLevel=
 bIgnore32PlayerLimit=False
@@ -653,7 +656,7 @@ Games=(GameType="XGame.xDoubleDom",ActiveMaplist="Default DOM2")
 Games=(GameType="XGame.xTeamGame",ActiveMaplist="Default TDM")
 Games=(GameType="XGame.xVehicleCTFGame",ActiveMaplist=)
 Games=(GameType="ROEngine.ROTeamGame",ActiveMaplist="Default RO")
-Games=(GameType="KFmod.KFGameType",ActiveMaplist="Default KF")
+Games=(GameType="KFmod.KFGameType",ActiveMaplist="Default KF0")
 Games=(GameType="KFmod.KFGameTypePvP",ActiveMaplist="Default KFP")
 Games=(GameType="KFStoryGame.KFstoryGameInfo",ActiveMaplist="Default KFO")
 Games=(GameType="KFMod.KFDMGameType",ActiveMaplist="Default KFDM")
@@ -716,7 +719,7 @@ PreStartTime=5
 WeaponAmbientScale=5.0
 
 [Engine.VoiceChatReplicationInfo]
-bEnableVoiceChat=True
+bEnableVoiceChat=False
 bAllowLocalBroadcast=True
 MaxChatters=0
 LocalBroadcastRange=1000.000000
@@ -758,78 +761,78 @@ MapNamePrefixes=
 [DefaultKF MaplistRecord]
 DefaultTitle=Default KF
 DefaultGameType=KFMod.KFGameType
-DefaultActive=0
-DefaultMaps=KF-BioticsLab
-DefaultMaps=KF-westlondon
-DefaultMaps=KF-Farm
-DefaultMaps=KF-MountainPass
-DefaultMaps=KF-Offices
-DefaultMaps=KF-Wyre
-DefaultMaps=KF-Waterworks
-DefaultMaps=KF-Transit
-DefaultMaps=KF-ThrillsChills
-DefaultMaps=KF-Suburbia
-DefaultMaps=KF-Stronghold
-DefaultMaps=KF-Steamland
-DefaultMaps=KF-SirensBelch
-DefaultMaps=KF-MoonBase
-DefaultMaps=KF-Menu
-DefaultMaps=KF-Manor
-DefaultMaps=KF-Icebreaker
-DefaultMaps=KF-IceCave
-DefaultMaps=KF-Hospitalhorrors
-DefaultMaps=KF-HillbillyHorror
-DefaultMaps=KF-Hellride
-DefaultMaps=KF-Hell
-DefaultMaps=KF-FrightYard
-DefaultMaps=KF-Foundry
-DefaultMaps=KF-Forgotten
-DefaultMaps=KF-FilthsCross
-DefaultMaps=KF-EvilSantasLair
-DefaultMaps=KF-Departed
-DefaultMaps=KF-Crash
-DefaultMaps=KF-Clandestine
-DefaultMaps=KF-Biohazard
-DefaultMaps=KF-Bedlam
-DefaultMaps=KF-Aperture
-DefaultMaps=KF-AbusementPark
+DefaultActive=1
+DefaultMaps=kf-evilsantaslair
+DefaultMaps=kf-suburbia
+DefaultMaps=kf-waterworks
+DefaultMaps=kf-westlondon
+DefaultMaps=kf-departed
+DefaultMaps=kf-bioticslab
+DefaultMaps=kf-icebreaker
+DefaultMaps=kf-farm
+DefaultMaps=kf-bedlam
+DefaultMaps=kf-wyre
+DefaultMaps=kf-manor
+DefaultMaps=kf-offices
+DefaultMaps=kf-foundry
+DefaultMaps=kf-crash
+DefaultMaps=kf-filthscross
+DefaultMaps=kf-biohazard
+DefaultMaps=kf-hospitalhorrors
+DefaultMaps=kf-mountainpass
+DefaultMaps=kf-abusementpark
+DefaultMaps=kf-hellride
+DefaultMaps=kf-aperture
+DefaultMaps=kf-icecave
+DefaultMaps=kf-forgotten
+DefaultMaps=kf-hell
 
 [KFMod.KFMaplist]
 MapNum=0
-Maps=KF-BioticsLab
 Maps=KF-westlondon
-Maps=KF-Farm
-Maps=KF-MountainPass
+Maps=KF-BioticsLab
 Maps=KF-Offices
-Maps=KF-Wyre
-Maps=KF-Waterworks
-Maps=KF-Transit
-Maps=KF-ThrillsChills
-Maps=KF-Suburbia
-Maps=KF-Stronghold
-Maps=KF-Steamland
-Maps=KF-SirensBelch
-Maps=KF-MoonBase
-Maps=KF-Menu
-Maps=KF-Manor
-Maps=KF-Icebreaker
-Maps=KF-IceCave
-Maps=KF-Hospitalhorrors
-Maps=KF-HillbillyHorror
-Maps=KF-Hellride
-Maps=KF-Hell
-Maps=KF-FrightYard
-Maps=KF-Foundry
-Maps=KF-Forgotten
-Maps=KF-FilthsCross
-Maps=KF-EvilSantasLair
-Maps=KF-Departed
-Maps=KF-Crash
-Maps=KF-Clandestine
-Maps=KF-Biohazard
-Maps=KF-Bedlam
-Maps=KF-Aperture
+Maps=KF-MountainPass
+Maps=KF-Farm
+Maps=KF-BoxWithoutHope-Extended-IGCEdit-Fix
+Maps=KF-CastleDefense
+Maps=KF-Doom2-Final-V7
+Maps=KF-Dust2-Classic-Night-b2
+Maps=KF-Dust_1
+Maps=KF-Farm-Day-v1
+Maps=KF-LittleDeathBasin-fix2
+Maps=KF-NukeTown
+Maps=KF-ROMAN-ARENA[UltraMapping]
+Maps=KF-Termination
 Maps=KF-AbusementPark
+Maps=KF-Aperture
+Maps=KF-Bedlam
+Maps=KF-Biohazard
+Maps=KF-Clandestine
+Maps=KF-Crash
+Maps=KF-Departed
+Maps=KF-EvilSantasLair
+Maps=KF-FilthsCross
+Maps=KF-Forgotten
+Maps=KF-Foundry
+Maps=KF-FrightYard
+Maps=KF-Hell
+Maps=KF-Hellride
+Maps=KF-HillbillyHorror
+Maps=KF-Hospitalhorrors
+Maps=KF-IceCave
+Maps=KF-Icebreaker
+Maps=KF-Manor
+Maps=KF-Menu
+Maps=KF-MoonBase
+Maps=KF-SirensBelch
+Maps=KF-Steamland
+Maps=KF-Stronghold
+Maps=KF-Suburbia
+Maps=KF-ThrillsChills
+Maps=KF-Transit
+Maps=KF-Waterworks
+Maps=KF-Wyre
 
 [UnrealGame.DeathMatch]
 RestartWait=10
@@ -883,12 +886,6 @@ DefaultTitle=Default KFO
 DefaultGameType=KFStoryGame.KFStoryGameInfo
 DefaultActive=0
 DefaultMaps=KFO-Steamland
-
-[IpDrv.UdpGamespyQuery]
-MinNetVer=0
-OldQueryPortNumber=7717
-bRestartServerOnPortSwap=True
-bDebugPortSwaps=True
 
 [KFMod.KFGameType]
 KFGameLength=2
@@ -991,11 +988,66 @@ MinPlayers=0
 EndTimeDelay=4.000000
 BotRatio=1.000000
 
+[IpDrv.UdpGamespyQuery]
+MinNetVer=0
+OldQueryPortNumber=7741
+bRestartServerOnPortSwap=True
+bDebugPortSwaps=True
+
 [MedicAlert.MedicAlert]
 NameColour=(B=255,G=255,R=255,A=255)
 TitleColour=(B=0,G=0,R=255,A=255)
-HealthLimit=70
+HealthLimit=45
 MaximumNameLength=16
-AlertMessage=Healing needed! Please Heal your teamates before they get fucked!
-UpdateFrequency=0.500000
+AlertMessage=Heal Your Fucking Mates, Bloody Hell!
+UpdateFrequency=2.000000
+
+[DefaultKF0 MaplistRecord]
+DefaultTitle=Default KF0
+DefaultGameType=KFMod.KFGameType
+DefaultActive=0
+DefaultMaps=KF-westlondon
+DefaultMaps=KF-BioticsLab
+DefaultMaps=KF-Offices
+DefaultMaps=KF-MountainPass
+DefaultMaps=KF-Farm
+DefaultMaps=KF-BoxWithoutHope-Extended-IGCEdit-Fix
+DefaultMaps=KF-CastleDefense
+DefaultMaps=KF-Doom2-Final-V7
+DefaultMaps=KF-Dust2-Classic-Night-b2
+DefaultMaps=KF-Dust_1
+DefaultMaps=KF-Farm-Day-v1
+DefaultMaps=KF-LittleDeathBasin-fix2
+DefaultMaps=KF-NukeTown
+DefaultMaps=KF-ROMAN-ARENA[UltraMapping]
+DefaultMaps=KF-Termination
+DefaultMaps=KF-AbusementPark
+DefaultMaps=KF-Aperture
+DefaultMaps=KF-Bedlam
+DefaultMaps=KF-Biohazard
+DefaultMaps=KF-Clandestine
+DefaultMaps=KF-Crash
+DefaultMaps=KF-Departed
+DefaultMaps=KF-EvilSantasLair
+DefaultMaps=KF-FilthsCross
+DefaultMaps=KF-Forgotten
+DefaultMaps=KF-Foundry
+DefaultMaps=KF-FrightYard
+DefaultMaps=KF-Hell
+DefaultMaps=KF-Hellride
+DefaultMaps=KF-HillbillyHorror
+DefaultMaps=KF-Hospitalhorrors
+DefaultMaps=KF-IceCave
+DefaultMaps=KF-Icebreaker
+DefaultMaps=KF-Manor
+DefaultMaps=KF-Menu
+DefaultMaps=KF-MoonBase
+DefaultMaps=KF-SirensBelch
+DefaultMaps=KF-Steamland
+DefaultMaps=KF-Stronghold
+DefaultMaps=KF-Suburbia
+DefaultMaps=KF-ThrillsChills
+DefaultMaps=KF-Transit
+DefaultMaps=KF-Waterworks
+DefaultMaps=KF-Wyre
 
