--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -1,4 +1,36 @@
 [ServerPerksMut.ServerPerksMut]
+MinPerksLevel=6
+MaxPerksLevel=6
+RemotePort=5000
+MidGameSaveWaves=0
+FTPKeepAliveSec=0
+RequirementScaling=1.000000
+RemoteDatabaseURL=192.168.1.33
+RemotePassword=Pass
+RemoteFTPUser=User
+RemoteFTPDir=
+ServerNewsURL=
+FTPUploadAllIgnoreDate=
+bUploadAllStats=False
+bForceGivePerk=True
+bNoSavingProgress=False
+bUseRemoteDatabase=False
+bUsePlayerNameAsID=False
+bMessageAnyPlayerLevelUp=False
+bNoPerkChanges=False
+bUseLowestRequirements=False
+bBWZEDTime=False
+bUseEnhancedScoreboard=True
+bOverrideUnusedCustomStats=False
+bAllowAlwaysPerkChanges=False
+bEnableWebAdmin=True
+bForceCustomChars=False
+bEnableChatIcons=True
+bEnhancedShoulderView=True
+bFixGrenadeExploit=True
+bAdminEditStats=True
+bUseFTPLink=False
+bDebugDatabase=False
 Perks=ServerPerksP.SRVetSupportSpec
 Perks=ServerPerksP.SRVetBerserker
 Perks=ServerPerksP.SRVetCommando
@@ -29,7 +61,7 @@ TraderInventory=3:KFMod.WinchesterPickup
 TraderInventory=3:KFMod.CrossbowPickup
 TraderInventory=3:KFMod.M14EBRPickup
 TraderInventory=3:KFMod.M99Pickup
-TraderInventory=3:KFMod.SPSniperPickup
+TraderInventory=3:KFEnhancedMusket.EnhancedMusketPickup
 TraderInventory=4:KFMod.BullpupPickup
 TraderInventory=4:KFMod.AK47Pickup
 TraderInventory=4:KFMod.MKb42Pickup
@@ -80,6 +112,38 @@ TraderInventory=4:KFMod.NeonAK47Pickup
 TraderInventory=5:KFMod.NeonKrissMPickup
 TraderInventory=2:KFMod.NeonKSGPickup
 TraderInventory=4:KFMod.NeonSCARMK17Pickup
+TraderInventory=8:CuteCostumes.PandaPickup
+TraderInventory=8:CuteCostumes.BunnyPickup
+TraderInventory=8:CuteCostumes.DinoPickup
+TraderInventory=8:CuteCostumes.FoxPickup
+TraderInventory=8:CuteCostumes.BearPickup
+TraderInventory=8:CuteCostumes.BudPickup
+TraderInventory=8:CuteCostumes.AureolaPickup
+TraderInventory=8:CuteCostumes.HeroPickup
+TraderInventory=8:CuteCostumes.PumpkinPickup
+TraderInventory=8:CuteCostumes.KirbyPickup
+TraderInventory=8:CuteCostumes.YoshiPickup
+TraderInventory=8:CuteCostumes.ChainChompPickup
+TraderInventory=8:CuteCostumes.NonPickup
+TraderInventory=8:CuteCostumes.ElephantPickup
+TraderInventory=8:CuteCostumes.AquaPickup
+TraderInventory=8:CuteCostumes.PeachPickup
+TraderInventory=8:CuteCostumes.DaisyPickup
+TraderInventory=8:CuteCostumes.ZeldaPickup
+TraderInventory=8:CuteCostumes.SirenPickup
+TraderInventory=8:CuteCostumes.HuskPickup
+TraderInventory=8:CuteCostumes.FlagsPickup
+TraderInventory=8:CuteCostumes.CronoPickup
+TraderInventory=8:CuteCostumes.EgyptPickup
+TraderInventory=8:CuteCostumes.GrassPickup
+TraderInventory=8:CuteCostumes.ProvokePickup
+TraderInventory=8:CuteCostumes.GhostPickup
+TraderInventory=8:CuteCostumes.PikachuPickup
+TraderInventory=8:CuteCostumes.BlackWingPickup
+TraderInventory=8:CuteCostumes.AngelPickup
+TraderInventory=8:CuteCostumes.FairyWingsPickup
+TraderInventory=8:CuteCostumes.LovePickup
+TraderInventory=8:CuteCostumes.BatsPickup
 WeaponCategories=4:Melee
 WeaponCategories=2:Pistol
 WeaponCategories=1:Shotgun
@@ -89,18 +153,6 @@ WeaponCategories=0:Medic Gun
 WeaponCategories=6:Explosive
 WeaponCategories=5:Flame Thrower
 WeaponCategories=7:Misc
-MinPerksLevel=6
-MaxPerksLevel=6
-RemotePort=5000
-MidGameSaveWaves=0
-FTPKeepAliveSec=0
-RequirementScaling=1.000000
-RemoteDatabaseURL=192.168.1.33
-RemotePassword=Pass
-RemoteFTPUser=User
-RemoteFTPDir=
-ServerNewsURL=
-FTPUploadAllIgnoreDate=
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
@@ -116,24 +168,4 @@ SmileyTags=(iconTexture="ServerPerks.I_Cool",IconTag="B)",bCaseInsensitive=False
 SmileyTags=(iconTexture="ServerPerks.I_Hmm",IconTag="Hmm",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Scream",IconTag="XD",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Spam",IconTag="SPAM",bCaseInsensitive=False)
-bUploadAllStats=False
-bForceGivePerk=False
-bNoSavingProgress=False
-bUseRemoteDatabase=False
-bUsePlayerNameAsID=False
-bMessageAnyPlayerLevelUp=False
-bNoPerkChanges=False
-bUseLowestRequirements=False
-bBWZEDTime=False
-bUseEnhancedScoreboard=True
-bOverrideUnusedCustomStats=False
-bAllowAlwaysPerkChanges=True
-bEnableWebAdmin=True
-bForceCustomChars=False
-bEnableChatIcons=True
-bEnhancedShoulderView=True
-bFixGrenadeExploit=True
-bAdminEditStats=True
-bUseFTPLink=False
-bDebugDatabase=False
 
