--- a/System/WeaponPickupMessage.ini
+++ b/System/WeaponPickupMessage.ini
@@ -2,5 +2,5 @@
 NameColour=(B=0,G=155,R=0,A=255)
 WeaponColour=(B=0,G=155,R=0,A=255)
 MessageColour=(B=255,G=255,R=255,A=255)
-WeaponPickupMessage=%name% picked up %weapon% ! Good on you son, go slay some Zeds!
+WeaponPickupMessage=Princess %name% picked up a %weapon%
 
