[feature] Updated ZedVoiceChanger to v3.0

--- a/System/KFZedVoiceChanger.ini
+++ b/System/KFZedVoiceChanger.ini
@@ -1,5 +1,5 @@
 [KFZedVoiceChanger.KFZedVoiceChanger]
-bSiren=False
+bSiren=True
 bScrake=True
 bFleshP=True
 bPatty=True
@@ -8,4 +8,3 @@ bClot=False
 bCrawler=True
 bGib=True
 bDecap=True
-
