[feature] Added 4 New Maps

--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -794,6 +794,10 @@ Maps=KF-BioticsLab
 Maps=KF-Offices
 Maps=KF-MountainPass
 Maps=KF-Farm
+Maps=KF-BackToBack
+Maps=KF-DefenceCave
+Maps=KF-NoHope
+Maps=KF-TOTO-BENKI
 Maps=KF-BoxWithoutHope-Extended-IGCEdit-Fix
 Maps=KF-CastleDefense
 Maps=KF-Doom2-Final-V7
@@ -1011,6 +1015,10 @@ DefaultMaps=KF-BioticsLab
 DefaultMaps=KF-Offices
 DefaultMaps=KF-MountainPass
 DefaultMaps=KF-Farm
+DefaultMaps=KF-BackToBack
+DefaultMaps=KF-DefenceCave
+DefaultMaps=KF-NoHope
+DefaultMaps=KF-TOTO-BENKI
 DefaultMaps=KF-BoxWithoutHope-Extended-IGCEdit-Fix
 DefaultMaps=KF-CastleDefense
 DefaultMaps=KF-Doom2-Final-V7
