[misc] Added 2 ViPs

--- a/System/KFAreYouVIP.ini
+++ b/System/KFAreYouVIP.ini
@@ -8,6 +8,8 @@ sGodLikeText=%w - [%vGOD%w]
 # It's best to have only 2 options active at a time, or the scoreboard will act crazy with the fonts and trying to squeeze everything
 # If you enable 1 option and the text is huge, try to make the label smaller e.g. 3 letters, like VIP
 aSpecialPlayers=(PName="Vel-San",SteamID="76561198122568951",Color="%g",isVIP=true,sVIP="%w - [%bViP%w]",isDonator=false,sDonator="%w - [%gD$SH%w]",isGodLike=false,sGodLike="")
+aSpecialPlayers=(PName="ihdsm",SteamID="76561198169111371",Color="%o",isVIP=true,sVIP="%w - [%bViP%w]",isDonator=false,sDonator="%w - [%gD$SH%w]",isGodLike=false,sGodLike="")
+aSpecialPlayers=(PName="Empire",SteamID="76561198346172345",Color="%v",isVIP=true,sVIP="%w - [%bViP%w]",isDonator=false,sDonator="%w - [%gD$SH%w]",isGodLike=false,sGodLike="")
 # You can add more colors by using the same format of the below ColorList
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
