[release] v3.4.2 Public Release

--- a/System/ServerAdsKF.ini
+++ b/System/ServerAdsKF.ini
@@ -1,20 +1,20 @@
 [ServerAdsKF.ServerAdsKF]
 bEnabled=True
-fDelay=120.000000
+fDelay=180.000000
 sLines[0]=%rServer Hosted by Vel-San, Contact on Steam for Support
 sLines[1]=%bServer IP: %g217.182.197.134 %w| Fav. the server for easier access!
-sLines[2]=%oNo Cheating, Griefing or BMing!
-sLines[3]=%oAlways Stay Grouped!
-sLines[4]=%bCustom Requests & Questions: %gVel-San@protomail.com
-sLines[5]=%oServer Has Custom Maps
-sLines[6]=%oServer Has Difficulty Votes
-sLines[7]=%oPlayer Outfits in the 'Off-Perk' trader shop
-sLines[8]=%oAll DLC Weapons Unlocked
-sLines[9]=%oSprint Boost if you heal yourself under 50 HP
-sLines[10]=%rServer is NOT White-listed!
-sLines[11]=%oAll Players are Max-Perk lvl
-sLines[12]=%oSome Weapons have a slight stat changed; Contact Vel-San to know which ones have been edited
-sLines[13]=#SHARE THE NANU NANU KNOWLEDGE, LET OTHERS COME AND SLAY ZEDS
+sLines[2]=%bSteam Group: %w/groups/%gNanu-Nanu %w| Join Us Now!
+sLines[3]=%oWant to be %bViP %w? Join the steam group & be a constant player on the server!
+sLines[4]=%oNo Cheating, Griefing or BMing!
+sLines[5]=%oAlways Stay Grouped!
+sLines[6]=%bCustom Requests & Questions: %gVel-San@protonmail.com
+sLines[7]=%oServer Has Custom Maps
+sLines[8]=%oServer Has Difficulty Votes
+sLines[9]=%oPlayer Outfits in the 'Off-Perk' trader shop
+sLines[10]=%oAll DLC Weapons Unlocked
+sLines[11]=%rServer is NOT White-listed!
+sLines[12]=%oAll Players are Max-Perk lvl
+sLines[13]=# SHARE THE NANU NANU KNOWLEDGE, LET OTHERS COME AND SLAY ZEDS
 sLines[14]=
 sLines[15]=
 sLines[16]=
@@ -43,4 +43,3 @@ ColorList=(ColorName="Green",ColorTag="%g",Color=(B=0,G=200,R=0,A=0))
 ColorList=(ColorName="Blue",ColorTag="%b",Color=(B=200,G=100,R=0,A=0))
 ColorList=(ColorName="Violet",ColorTag="%v",Color=(B=139,G=0,R=255,A=0))
 ColorList=(ColorName="White",ColorTag="%w",Color=(B=200,G=200,R=200,A=0))
-
