[release] v3.5 Public Release

--- a/System/KFMapVote.ini
+++ b/System/KFMapVote.ini
@@ -12,7 +12,7 @@ RepeatLimit=0
 DefaultGameConfig=0
 bDefaultToCurrentGameType=True
 bMapVote=True
-bKickVote=True
+bKickVote=False
 bMatchSetup=False
 KickPercent=51
 bAnonymousKicking=True
