--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -93,6 +93,7 @@ VoIPAllowVAD=False
 ServerActors=IpDrv.MasterServerUplink
 ServerActors=UWeb.WebServer
 ServerActors=ServerAdsKF.ServerAdsKF
+ServerActors=Acedia.StartUp
 ServerPackages=Core
 ServerPackages=Engine
 ServerPackages=Fire
@@ -746,7 +747,7 @@ RepeatLimit=4
 DefaultGameConfig=0
 bDefaultToCurrentGameType=True
 bMapVote=True
-bKickVote=True
+bKickVote=False
 bMatchSetup=False
 KickPercent=51
 bAnonymousKicking=True
