[misc] Added entry for 4 banned players

--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -300,7 +300,7 @@ ShortName=Change_Me
 ServerRegion=0
 AdminName=Change_Me
 AdminEmail=Change_Me
-MessageOfTheDay=Have fun & Do not Harrass others!
+MessageOfTheDay=Greetings, Earthling! Join the Nanu Nanu Cult by visiting the SteamGroup: /groups/Nanu-Nanu
 
 [D3DDrv.D3DRenderDevice]
 DetailTextures=True
@@ -513,6 +513,10 @@ GamePassword=
 bBanByID=True
 LoginDelaySeconds=0.000000
 IPPolicies=ACCEPT;*
+BannedIDs=76561198275468981 [GBR] Skitzy_C
+BannedIDs=76561198819732890 [GBR] tristanj14
+BannedIDs=76561198141582033 [GBR] Big_SMOKE
+BannedIDs=76561198355829218 [GBR] iQuaresma
 
 [Engine.GameInfo]
 GoreLevel=2
@@ -798,7 +802,6 @@ Maps=KF-Farm
 Maps=KF-BackToBack
 Maps=KF-DefenceCave
 Maps=KF-NoHope
-Maps=KF-TOTO-BENKI
 Maps=KF-MushroomWithoutHope
 Maps=KF-CastleDefense
 Maps=KF-Doom2-Final-V7
@@ -1019,7 +1022,6 @@ DefaultMaps=KF-Farm
 DefaultMaps=KF-BackToBack
 DefaultMaps=KF-DefenceCave
 DefaultMaps=KF-NoHope
-DefaultMaps=KF-TOTO-BENKI
 DefaultMaps=KF-MushroomWithoutHope
 DefaultMaps=KF-CastleDefense
 DefaultMaps=KF-Doom2-Final-V7
