--- a/System/ServerAdsKF.ini
+++ b/System/ServerAdsKF.ini
@@ -1,20 +1,20 @@
 [ServerAdsKF.ServerAdsKF]
 bEnabled=True
-fDelay=180.000000
+fDelay=120.000000
 sLines[0]=%rServer Hosted by Vel-San, Contact on Steam for Support
 sLines[1]=%bServer IP: %g217.182.197.134 %w| Fav. the server for easier access!
-sLines[2]=%bSteam Group: %w/groups/%gNanu-Nanu %w| Join Us Now!
-sLines[3]=%oWant to be %bViP %w? Join the steam group & be a constant player on the server!
-sLines[4]=%oNo Cheating, Griefing or BMing!
-sLines[5]=%oAlways Stay Grouped!
-sLines[6]=%bCustom Requests & Questions: %gVel-San@protonmail.com
-sLines[7]=%oServer Has Custom Maps
-sLines[8]=%oServer Has Difficulty Votes
-sLines[9]=%oPlayer Outfits in the 'Off-Perk' trader shop
-sLines[10]=%oAll DLC Weapons Unlocked
-sLines[11]=%rServer is NOT White-listed!
-sLines[12]=%oAll Players are Max-Perk lvl
-sLines[13]=# SHARE THE NANU NANU KNOWLEDGE, LET OTHERS COME AND SLAY ZEDS
+sLines[2]=%oWant to be %bViP %w? join the %bSteam Group: %w/groups/%gNanu-Nanu %w& be a constant player on the server!
+sLines[3]=%oNo Cheating, Griefing or BMing! This will result in a perma-ban (IP + SteamID)
+sLines[4]=%oAlways Stay Grouped!
+sLines[5]=%oServer Has Custom Maps
+sLines[6]=%oServer Has Difficulty Votes
+sLines[7]=%oPlayer Outfits in the %g'Misc'%w section of the trader shop
+sLines[8]=%oAll DLC Weapons Unlocked
+sLines[9]=%rServer is NOT White-listed!
+sLines[10]=# SHARE THE NANU NANU KNOWLEDGE, LET OTHERS COME AND SLAY ZEDS
+sLines[11]=
+sLines[12]=
+sLines[13]=
 sLines[14]=
 sLines[15]=
 sLines[16]=
