[release] v3.6 Public Release

--- a/System/KFAreYouVIP.ini
+++ b/System/KFAreYouVIP.ini
@@ -1,21 +1,22 @@
 [KFAreYouVIP.KFAreYouVIP]
 # Replace %g %w with any other color you want from the list below
 # These are default values. To override these, use the below 'SpecialPlayers' List section for them
-sVIPText=%w - [%bVIP%w]
-sDonatorText=%w - [%g$$$%w]
-sGodLikeText=%w - [%vGOD%w]
+sVIPText=%w | %bViP%w
+sDonatorText=%w | %g$$$%w
+sGodLikeText=%w | %vGoD%w
 # Add VIP, Donator or GodLike Players here, follow the exact format | Color is for the Player Name as a whole
 # It's best to have only 2 options active at a time, or the scoreboard will act crazy with the fonts and trying to squeeze everything
 # If you enable 1 option and the text is huge, try to make the label smaller e.g. 3 letters, like VIP
-aSpecialPlayers=(PName="Vel-San",SteamID="76561198122568951",Color="%g",isVIP=true,sVIP="%w - [%bViP%w]",isDonator=false,sDonator="%w - [%gD$SH%w]",isGodLike=false,sGodLike="")
-aSpecialPlayers=(PName="ihdsm",SteamID="76561198169111371",Color="%o",isVIP=true,sVIP="%w - [%bViP%w]",isDonator=false,sDonator="%w - [%gD$SH%w]",isGodLike=false,sGodLike="")
-aSpecialPlayers=(PName="Empire",SteamID="76561198346172345",Color="%v",isVIP=true,sVIP="%w - [%bViP%w]",isDonator=false,sDonator="%w - [%gD$SH%w]",isGodLike=false,sGodLike="")
+aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=True,sGodLike="%w | %gGoD%w")
+aSpecialPlayers=(PName="ihdsm",steamID="76561198169111371",Color="%o",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Empire",steamID="76561198346172345",Color="%v",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 # You can add more colors by using the same format of the below ColorList
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
 ColorList=(ColorName="Yellow",ColorTag="%y",Color=(B=0,G=255,R=255,A=0))
 ColorList=(ColorName="Green",ColorTag="%g",Color=(B=0,G=200,R=0,A=0))
 ColorList=(ColorName="Blue",ColorTag="%b",Color=(B=200,G=100,R=0,A=0))
+ColorList=(ColorName="Teal",ColorTag="%t",Color=(B=113,G=179,R=60,A=0))
 ColorList=(ColorName="Violet",ColorTag="%v",Color=(B=139,G=0,R=255,A=0))
 ColorList=(ColorName="White",ColorTag="%w",Color=(B=200,G=200,R=200,A=0))
 # Better to keep debugging False :)
