[misc] Removed %w from Vel-San VIP

--- a/System/KFAreYouVIP.ini
+++ b/System/KFAreYouVIP.ini
@@ -7,7 +7,7 @@ sGodLikeText=%w | %vGoD%w
 # Add VIP, Donator or GodLike Players here, follow the exact format | Color is for the Player Name as a whole
 # It's best to have only 2 options active at a time, or the scoreboard will act crazy with the fonts and trying to squeeze everything
 # If you enable 1 option and the text is huge, try to make the label smaller e.g. 3 letters, like VIP
-aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=True,sGodLike="%w | %gGoD%w")
+aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=True,sVIP="%w | %bViP",isDonator=False,sDonator="",isGodLike=True,sGodLike="%w | %gGoD%w")
 aSpecialPlayers=(PName="ihdsm",steamID="76561198169111371",Color="%o",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Empire",steamID="76561198346172345",Color="%v",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 # You can add more colors by using the same format of the below ColorList
