[release] v3.8 Public Release

--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -799,6 +799,8 @@ Maps=KF-BioticsLab
 Maps=KF-Offices
 Maps=KF-MountainPass
 Maps=KF-Farm
+Maps=KF-NoScape
+Maps=KF-Sacred
 Maps=KF-BackToBack
 Maps=KF-DefenceCave
 Maps=KF-NoHope
@@ -1019,6 +1021,8 @@ DefaultMaps=KF-BioticsLab
 DefaultMaps=KF-Offices
 DefaultMaps=KF-MountainPass
 DefaultMaps=KF-Farm
+DefaultMaps=KF-NoScape
+DefaultMaps=KF-Sacred
 DefaultMaps=KF-BackToBack
 DefaultMaps=KF-DefenceCave
 DefaultMaps=KF-NoHope
@@ -1061,4 +1065,3 @@ DefaultMaps=KF-ThrillsChills
 DefaultMaps=KF-Transit
 DefaultMaps=KF-Waterworks
 DefaultMaps=KF-Wyre
-
