--- a/System/KFEnhancedSyringe.ini
+++ b/System/KFEnhancedSyringe.ini
@@ -1,5 +1,20 @@
 [KFEnhancedSyringe.KFEnhancedSyringe]
-boostWhen=50
-boost=500
-boostFor=2
-
+# If Player Below XX HP
+iBoostWhen=50
+# Boost Speed
+iBoostPower=350
+# Duration till the boost ends
+iBoostDuration=3
+# %BD is the number/placeholder of Boost Duration
+sBoostMessage=%wYou have been fucking %rboosted%w for %g%BD%w seconds! Run the %bFuck%w Away!
+# You can add more colors by using the same format of the below ColorList
+ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
+ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
+ColorList=(ColorName="Yellow",ColorTag="%y",Color=(B=0,G=255,R=255,A=0))
+ColorList=(ColorName="Green",ColorTag="%g",Color=(B=0,G=200,R=0,A=0))
+ColorList=(ColorName="Blue",ColorTag="%b",Color=(B=200,G=100,R=0,A=0))
+ColorList=(ColorName="Teal",ColorTag="%t",Color=(B=113,G=179,R=60,A=0))
+ColorList=(ColorName="Violet",ColorTag="%v",Color=(B=139,G=0,R=255,A=0))
+ColorList=(ColorName="White",ColorTag="%w",Color=(B=200,G=200,R=200,A=0))
+# Better to keep debugging False :)
+bDebug=False
