[release] v3.9.2 Public Release

--- a/System/KFAutoCallOut.ini
+++ b/System/KFAutoCallOut.ini
@@ -1,7 +1,7 @@
 [KFAutoCallOut.KFAutoCallOut]
 # Replace %g %w %b with any other color you want from the list below
 # After you right your warning message, use %FP and %SC as the number of Fleshpounds and Scrakes
-sWarningMSG=-----|| %gFP Count: %w %FPx | %bSC Count: %w %SCx ||-----
+sWarningMSG=-----|| %gFleshpounds Count: %w %FPx | %bScrakes Count: %w %SCx ||-----
 # Change the Delay/Frequency of each sent warning message. I find 5 Seconds to be optimal
 iDelay=10
 # Better to keep debugging False :)
