--- a/System/KFAreYouVIP.ini
+++ b/System/KFAreYouVIP.ini
@@ -10,6 +10,7 @@ sGodLikeText=%w | %vGoD%w
 aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=True,sVIP="%w | %bViP",isDonator=False,sDonator="",isGodLike=True,sGodLike="%w | %gGoD%w")
 aSpecialPlayers=(PName="ihdsm",steamID="76561198169111371",Color="%o",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Empire",steamID="76561198346172345",Color="%v",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Cronus",steamID="76561198372730682",Color="%b",isVIP=True,sVIP="%w | %yViP%w | %rKiller%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 # You can add more colors by using the same format of the below ColorList
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
