--- a/System/KFWeaponStatConfig.ini
+++ b/System/KFWeaponStatConfig.ini
@@ -8,4 +8,5 @@ DEBUG=True
 # ImpactDamage is only for weapons with Impact such as Rocket Laucnhers (e.g. Demo Weapons)
 StandardWeapons[0]="KFMod.M99SniperRifle;1.0;100;675;0.0;10;2750;2.25;3.03;1.0;2.6;2.0"
 StandardWeapons[1]="KFMod.HuskGun;1.0;25;25;100;6;2750;1.5;0.75;1.0;0.01;1.0"
-StandardWeapons[2]="KFMod.M32GrenadeLauncher;6;60;350;200;7;3250;1.1;0.33;1.0;1.0;1.5"
+StandardWeapons[2]="KFMod.M32GrenadeLauncher;6;60;350;200;7;3250;1.1;0.33;1.0;1.0;1.8"
+StandardWeapons[2]="KFMod.CamoM32GrenadeLauncher;6;60;350;200;7;3250;1.1;0.33;1.0;1.0;1.8"
