[release] v5.0 Public Release

--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -274,7 +274,7 @@ MasterServerList=(Address="207.135.144.10",Port=28902)
 MasterServerList=(Address="207.135.144.11",Port=28902)
 
 [IpDrv.HTTPDownload]
-RedirectToURL=https://kf-server.000webhostapp.com/kf-redirect/
+RedirectToURL=Change_Me
 ProxyServerHost=
 ProxyServerPort=3128
 UseCompression=True
