--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -25,7 +25,7 @@ bOverrideUnusedCustomStats=False
 bAllowAlwaysPerkChanges=False
 bEnableWebAdmin=True
 bForceCustomChars=False
-bEnableChatIcons=True
+bEnableChatIcons=False
 bEnhancedShoulderView=True
 bFixGrenadeExploit=True
 bAdminEditStats=True
@@ -39,6 +39,7 @@ Perks=ServerPerksP.SRVetFirebug
 Perks=ServerPerksP.SRVetSharpshooter
 Perks=ServerPerksP.SRVetDemolitions
 TraderInventory=5:KFMod.MP7MPickup
+TraderInventory=5:MGP.MGPPickup
 TraderInventory=5:KFMod.BlowerThrowerPickup
 TraderInventory=5:KFMod.MP5MPickup
 TraderInventory=5:KFMod.M7A3MPickup
@@ -153,6 +154,10 @@ WeaponCategories=0:Medic Gun
 WeaponCategories=6:Explosive
 WeaponCategories=5:Flame Thrower
 WeaponCategories=7:Misc
+CustomCharacters=KnucklesDT
+CustomCharacters=HL2Doll.HL2Doll_Bloody
+CustomCharacters=Tina.Tina
+CustomCharacters=DaedricKnight
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
@@ -168,4 +173,3 @@ SmileyTags=(iconTexture="ServerPerks.I_Cool",IconTag="B)",bCaseInsensitive=False
 SmileyTags=(iconTexture="ServerPerks.I_Hmm",IconTag="Hmm",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Scream",IconTag="XD",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Spam",IconTag="SPAM",bCaseInsensitive=False)
-
