[misc] Removed Tina & brought back normal S.P. Musket

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -62,6 +62,7 @@ TraderInventory=3:KFMod.WinchesterPickup
 TraderInventory=3:KFMod.CrossbowPickup
 TraderInventory=3:KFMod.M14EBRPickup
 TraderInventory=3:KFMod.M99Pickup
+TraderInventory=3:KFMod.SPSniperPickup
 TraderInventory=3:KFEnhancedMusket.EnhancedMusketPickup
 TraderInventory=4:KFMod.BullpupPickup
 TraderInventory=4:KFMod.AK47Pickup
@@ -156,7 +157,6 @@ WeaponCategories=5:Flame Thrower
 WeaponCategories=7:Misc
 CustomCharacters=KnucklesDT
 CustomCharacters=HL2Doll.HL2Doll_Bloody
-CustomCharacters=Tina.Tina
 CustomCharacters=DaedricKnight
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
