--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -160,18 +160,11 @@ CustomCharacters=HL2Doll.HL2Doll_Bloody
 CustomCharacters=DaedricKnight
 CustomCharacters=Dark.KnightSkin
 CustomCharacters=Dark.KnightCamoSkin
-CustomCharacters=valeraMut.valeraMut
-CustomCharacters=VaderSkin.DarthVaderMut
-CustomCharacters=HotRodMut.HotRodMut
-CustomCharacters=fermaMut.fermaMut
-CustomCharacters=Dark.KnightCamoSkinMut
-CustomCharacters=Dark.KnightSkinMut
-CustomCharacters=astonMut.astonMut
-CustomCharacters=Stalker
-CustomCharacters=Stalker_Old
-CustomCharacters=Stalker_Cloak
-CustomCharacters=The_Clot
-CustomCharacters=The_Clot_Old
+CustomCharacters=VaderSkin.DarthVader
+CustomCharacters=HotRodMut.HotRod
+CustomCharacters=valeraMut.valera
+CustomCharacters=fermaMut.ferma
+CustomCharacters=astonMut.aston
 SmileyTags=(iconTexture="ServerPerks.I_Mad",IconTag=">:(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_Frown",IconTag=":(",bCaseInsensitive=False)
 SmileyTags=(iconTexture="ServerPerks.I_GreenLickB",IconTag=":)",bCaseInsensitive=False)
