[release] v5.3 Public Release

--- a/System/KFServerTools.ini
+++ b/System/KFServerTools.ini
@@ -3,6 +3,8 @@
 bAdminAndSelectPlayers=True
 # Command to be used to skip the whole trader time of current wave
 sSkipTraderCmd=skip
+# Command to be used when you want to start a skip trader vote, instead of instantly skipping regardless of others
+sVoteSkipTraderCmd=voteskip
 # Command to be used to change trader time of current wave
 sCurrentTraderTimeCmd=tt
 # Command to be used to change default trader time for whole match
@@ -15,10 +17,9 @@ sReviveThem=rev
 # Default trader time
 iDefaultTraderTime=60
 # Cost for a single revive, if you have the Dosh, we give you the revive!
-iReviveCost=250
+iReviveCost=300
 # Add Special players who can access the mutate commands
 aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951")
-aSpecialPlayers=(PName="Cronus",steamID="76561198372730682")
 # Please do not delete or modify the tags of colors below!
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
