[release] v5.4 Public Release

--- a/System/ServerPerks.ini
+++ b/System/ServerPerks.ini
@@ -114,6 +114,7 @@ TraderInventory=4:KFMod.NeonAK47Pickup
 TraderInventory=5:KFMod.NeonKrissMPickup
 TraderInventory=2:KFMod.NeonKSGPickup
 TraderInventory=4:KFMod.NeonSCARMK17Pickup
+TraderInventory=8:Shepard.ShepardPickup
 TraderInventory=8:CuteCostumes.PandaPickup
 TraderInventory=8:CuteCostumes.BunnyPickup
 TraderInventory=8:CuteCostumes.DinoPickup
