--- a/System/KFServerTools.ini
+++ b/System/KFServerTools.ini
@@ -11,8 +11,10 @@ sCurrentTraderTimeCmd=tt
 sCustomTraderTimeCmd=st
 # Command to be used for self revive
 sReviveMe=revme
-# Command to revive other players. Usage: mutate rev all, or mutate rev <PlayerName>
-# Player name doesn't have to be 100% exact, you can type their first 3 or 4 letters
+# Command to show list of all dead players, along with their rev codes
+sReviveListCmd=dpl
+# Command to revive other players. Usage: mutate rev all, or mutate rev <Rev Code>
+# Player Rev Code doesn't have to be 100% accurate, just put at least 3 numbers
 sReviveThem=rev
 # Default trader time
 iDefaultTraderTime=60
@@ -20,6 +22,7 @@ iDefaultTraderTime=60
 iReviveCost=300
 # Add Special players who can access the mutate commands
 aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951")
+aSpecialPlayers=(PName="Cronus",steamID="76561198372730682")
 # Please do not delete or modify the tags of colors below!
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
