[release] v5.6 Public Release

--- a/System/KFServerTools.ini
+++ b/System/KFServerTools.ini
@@ -1,6 +1,9 @@
 [KFServerTools.KFServerTools]
 # If set to True, only special players can manipulate trader time!
 bAdminAndSelectPlayers=True
+# If Set to True, you have to use the Custom ServerPerks from the workshop description
+# This will replace the 'Help' section, because who the fuck uses that section anyways?
+bServerPerksCompatibility=True
 # Command to be used to skip the whole trader time of current wave
 sSkipTraderCmd=skip
 # Command to be used when you want to start a skip trader vote, instead of instantly skipping regardless of others
@@ -8,7 +11,7 @@ sVoteSkipTraderCmd=voteskip
 # Command to be used to change trader time of current wave
 sCurrentTraderTimeCmd=tt
 # Command to be used to change default trader time for whole match
-sCustomTraderTimeCmd=st
+sCustomTraderTimeCmd=ct
 # Command to be used for self revive
 sReviveMe=revme
 # Command to show list of all dead players, along with their rev codes
@@ -20,7 +23,7 @@ sReviveThem=rev
 iDefaultTraderTime=60
 # Cost for a single revive, if you have the Dosh, we give you the revive!
 iReviveCost=300
-# Add Special players who can access the mutate commands
+# Add Special players who can access the mutate commands for trader manipulation
 aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951")
 aSpecialPlayers=(PName="Cronus",steamID="76561198372730682")
 # Please do not delete or modify the tags of colors below!
