[misc] Updated Changelog with new maps

--- a/System/KillingFloor.ini
+++ b/System/KillingFloor.ini
@@ -94,6 +94,7 @@ ServerActors=IpDrv.MasterServerUplink
 ServerActors=UWeb.WebServer
 ServerActors=ServerAdsKF.ServerAdsKF
 ServerActors=Acedia.StartUp
+ServerActors=FakedPlus.Custom
 ServerPackages=Core
 ServerPackages=Engine
 ServerPackages=Fire
