--- a/System/KFWeaponStatConfig.ini
+++ b/System/KFWeaponStatConfig.ini
@@ -11,3 +11,8 @@ StandardWeapons[1]="KFMod.HuskGun;1.0;25;25;100;6;2750;1.5;0.75;1.0;0.01;1.0"
 StandardWeapons[2]="KFMod.M32GrenadeLauncher;6;60;350;200;7;3250;1.1;0.33;1.0;1.0;1.8"
 StandardWeapons[3]="KFMod.CamoM32GrenadeLauncher;6;60;350;200;7;3250;1.1;0.33;1.0;1.0;1.8"
 StandardWeapons[4]="MGP.MGP;1;100;0;100;5;1500;0;3.333;1.0;1.0;0.01"
+StandardWeapons[5]="KFMod.MP5MMedicGun;32;10;30;0;3;1375;1.1;0.08;1;1.5;2.7"
+StandardWeapons[6]="KFMod.CamoMP5MMedicGun;32;10;30;0;3;1375;1.1;0.08;1;1.5;2.7"
+StandardWeapons[7]="KFMod.KrissMMedicGun;25;10;40;0;3;2750;1.1;0.06;1;1.5;2.5"
+StandardWeapons[8]="KFMod.NeonKrissMMedicGun;25;10;40;0;3;2750;1.1;0.06;1;1.5;2.5"
+StandardWeapons[9]="KFMod.M7A3MMedicGun;15;10;70;0;6;2050;1.1;0.12;1.2;1.3;2.5"
