[misc] Added 1 ViP Player

--- a/System/KFAreYouVIP.ini
+++ b/System/KFAreYouVIP.ini
@@ -12,6 +12,7 @@ aSpecialPlayers=(PName="ihdsm",steamID="76561198169111371",Color="%o",isVIP=True
 aSpecialPlayers=(PName="Empire",steamID="76561198346172345",Color="%v",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Cronus",steamID="76561198372730682",Color="%b",isVIP=True,sVIP="%w | %yViP%w | %rKiller%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Aladin_19",steamID="76561199072992334",Color="%g",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="MukaShino",steamID="76561198200384791",Color="%b",isVIP=True,sVIP="%w | %oViP%w | %yBindSpammer%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 # You can add more colors by using the same format of the below ColorList
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
