--- a/System/KFAreYouVIP.ini
+++ b/System/KFAreYouVIP.ini
@@ -11,8 +11,13 @@ aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951",Color="%t",isVIP=Tr
 aSpecialPlayers=(PName="ihdsm",steamID="76561198169111371",Color="%o",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Empire",steamID="76561198346172345",Color="%v",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="Cronus",steamID="76561198372730682",Color="%b",isVIP=True,sVIP="%w | %yViP%w | %rKiller%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
-aSpecialPlayers=(PName="Aladin_19",steamID="76561199072992334",Color="%g",isVIP=True,sVIP="%w | %bViP%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Aladin_19",steamID="76561199072992334",Color="%g",isVIP=True,sVIP="%w | %bViP%w | %rShredder%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 aSpecialPlayers=(PName="MukaShino",steamID="76561198200384791",Color="%b",isVIP=True,sVIP="%w | %oViP%w | %yBindSpammer%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Dem Zii",steamID="76561198018787866",Color="%b",isVIP=True,sVIP="%w | %gViP%w | %yAce%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Aslan",steamID="76561197990490327",Color="%o",isVIP=True,sVIP="%w | %rViP%w | %bBoss%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Mr. AK",steamID="76561199023028389",Color="%g",isVIP=True,sVIP="%w | %wViP%w | %gPro%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="EleNA",steamID="76561197967182915",Color="%p",isVIP=True,sVIP="%w | %oViP%w | %yQueen%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
+aSpecialPlayers=(PName="Chief",steamID="76561198881311474",Color="%w",isVIP=True,sVIP="%w | %bViP%w | %oPounder%w",isDonator=False,sDonator="",isGodLike=False,sGodLike=)
 # You can add more colors by using the same format of the below ColorList
 ColorList=(ColorName="Red",ColorTag="%r",Color=(B=0,G=0,R=200,A=0))
 ColorList=(ColorName="Orange",ColorTag="%o",Color=(B=0,G=127,R=255,A=0))
@@ -22,5 +27,7 @@ ColorList=(ColorName="Blue",ColorTag="%b",Color=(B=200,G=100,R=0,A=0))
 ColorList=(ColorName="Teal",ColorTag="%t",Color=(B=113,G=179,R=60,A=0))
 ColorList=(ColorName="Violet",ColorTag="%v",Color=(B=139,G=0,R=255,A=0))
 ColorList=(ColorName="White",ColorTag="%w",Color=(B=200,G=200,R=200,A=0))
+ColorList=(ColorName="Pink",ColorTag="%p",Color=(B=180,G=105,R=255,A=0))
+ColorList=(ColorName="Black",ColorTag="%x",Color=(B=0,G=0,R=0,A=0))
 # Better to keep debugging False :)
 bDebug=False
