[misc] Update ServerTools

--- a/System/KFServerTools.ini
+++ b/System/KFServerTools.ini
@@ -23,6 +23,8 @@ sReviveThem=rev
 iDefaultTraderTime=60
 # Cost for a single revive, if you have the Dosh, we give you the revive!
 iReviveCost=300
+# Timer on which the collected votes will reset, if the trader skip vote didn't pass
+iVoteReset=30
 # Add Special players who can access the mutate commands for trader manipulation
 aSpecialPlayers=(PName="Vel-San",steamID="76561198122568951")
 aSpecialPlayers=(PName="Cronus",steamID="76561198372730682")
